# ForgottenCall

./: CMakeLists.txt  README.md  cmake_build.sh  docker_build.bat  docker_build.sh  docker_run.bat  docker_run.sh
docker/: call_docker.bat  call_docker.sh
docker/environment/: build.Dockerfile  runtime.Dockerfile
resources/: CMakeLists.txt
resources/content/: content_1.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/logger/: CMakeLists.txt  Logger.hpp
src/logger/private/: CDltLoggerContext.cpp  CDltLoggerContext.hpp  CMakeLists.txt  Logger.cpp
src/resourcesLoader/: ContentLoader.hpp
src/resourcesLoader/private/: CMakeLists.txt  ContentLoader.cpp
test/: CMakeLists.txt  UT_example.cpp
